PGOV-1383 Fix vertical accordion spillover and HTML tags showing in caption (#2994)

--- a/web/themes/custom/cloudy/src/css/drupal/_ckeditor-accordion.scss
+++ b/web/themes/custom/cloudy/src/css/drupal/_ckeditor-accordion.scss
@@ -16,7 +16,13 @@
 }
 
 .aria-accordion div.aria-accordion__panel {
-  padding: 0.5rem 1rem;
+  @include clearfix;
+
+  padding: spacer(3) spacer(4);
+
+  p:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
 .aria-accordion .aria-accordion__heading {
